--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -122,6 +122,7 @@
   </head>
 
   <body class="gradient">
+    <p>heuheiuhdiuhs</p>
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ "accessibility.skip_to_text" | t }}
     </a>
